--- a/RegulonDBCytoscape/DESCRIPTION
+++ b/RegulonDBCytoscape/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: RegulonDBCytoscape
 Type: Package
-Title: What the Package Does (Title Case)
+Title: RegulonDBCytoscape
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Antonio Martinez, Luis Pedro Iniguez, Servando Ramirez, Tobias Portillo
+Maintainer: Daniela Ledezma <yourself@somewhere.net>
+Description: The package takes text format tables (output from elsewhere), 
+    and sends the information to Cytoscape. It also provides you with an
+    html file with the network. This package is designed for runing on 
+    [GENSOR Units](https://www.ncbi.nlm.nih.gov/pubmed/28824593)
+License: MIT License
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
